# ifdh-art

./: .gitignore  CMakeLists.txt
cmakeConfig/: CMakeLists.txt  ifdh-art-fragment.cmake.in
ifdh_art/: CMakeLists.txt
ifdh_art/IFBeamService/: CMakeLists.txt
ifdh_art/IFCatalogInterface/: CMakeLists.txt
ifdh_art/IFDHService/: CMakeLists.txt
ifdh_art/IFFileTransfer/: CMakeLists.txt
ifdh_art/nucondbService/: CMakeLists.txt
src/IFCatalogInterface/: CMakeLists.txt  IFCatalogInterface_service.cc
src/IFDHService/: CMakeLists.txt
src/IFFileTransfer/: CMakeLists.txt
src/nucondbService/: CMakeLists.txt
ups/: product_deps  setup_for_development
